--- a/BestPractices.API/BestPractices.API.csproj
+++ b/BestPractices.API/BestPractices.API.csproj
@@ -4,5 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BestPractices.Api.Service\BestPractices.Api.Service.csproj" />
+  </ItemGroup>
+
 
 </Project>
