--- a/BestPractices.Api.Service/BestPractices.Api.Service.csproj
+++ b/BestPractices.Api.Service/BestPractices.Api.Service.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BestPractices.API.Data\BestPractices.API.Data.csproj" />
+    <ProjectReference Include="..\BestPractices.API.Models\BestPractices.API.Models.csproj" />
+  </ItemGroup>
+
 </Project>
