--- a/BestPractices.Api.Service/BestPractices.Api.Service.csproj
+++ b/BestPractices.Api.Service/BestPractices.Api.Service.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
